--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "npm": "^6.0.0",
+    "v-tooltip": "^2.0.0-rc.31",
     "vue": "^2.5.2",
     "vuex": "^3.0.1"
   },
