--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "npm": "^6.0.0",
     "v-tooltip": "^2.0.0-rc.31",
     "vue": "^2.5.2",
+    "vue-notification": "^1.3.7",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
