--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "npm": "^6.0.0",
+    "shortid": "^2.2.8",
     "v-tooltip": "^2.0.0-rc.31",
     "vue": "^2.5.2",
     "vue-notification": "^1.3.7",
