--- a/functions/package.json
+++ b/functions/package.json
@@ -12,7 +12,8 @@
   "main": "lib/index.js",
   "dependencies": {
     "firebase-admin": "~5.12.1",
-    "firebase-functions": "^1.0.3"
+    "firebase-functions": "^1.0.3",
+    "shortid": "^2.2.8"
   },
   "devDependencies": {
     "tslint": "^5.8.0",
