--- a/project/firebase.json
+++ b/project/firebase.json
@@ -4,9 +4,7 @@
     "indexes": "firestore.indexes.json"
   },
   "functions": {
-    "predeploy": [
-      "npm --prefix functions run build"
-    ]
+    "source": "functions"
   },
   "hosting": {
     "public": "dist",
